--- a/Request_Data/app/src/main/res/values/strings.xml
+++ b/Request_Data/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="txt_username_enter">Enter Your UserName:</string>
     <string name="btn_txt_return">Return To Main</string>
     <string name="extra_string">name</string>
+    <string name="toast_txt">Username must be at least 5 characters long</string>
 </resources>
